fix dark mode color

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 }
 
 .theme-dark {
-    --bg-background-primary: #212B37;
+    --bg-background-primary: #15202B;
     --bg-background-secondary: #4C5968;
 
     --text-kata-primary: #ffffff;
